# lever-jpb-monitor

./: .gitignore  README.md  cli.py  pyproject.toml
.github/workflows/: keep-alive.yml  watch.yml
lever_watcher/: __init__.py  cli.py  client.py  differ.py  notifier.py
